Fix some of the CSS, so links and tables are readable now

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -62,7 +62,7 @@ html, body {
   position:relative;
   z-index:10;
   font-family:sans-serif;
-  font-size:10px;
+  font-size:12px;
   height:62px;
   margin-top:-80px;
   width:100%;
@@ -125,6 +125,17 @@ html, body {
   float:right;
 }
 
+.form textarea.field {
+  background-color:#ededed;
+  border:1px solid #ababab;
+  font-color:#757575;
+  padding:1px 5px;
+  font-size:12px;
+  font-family:Verdana,Sans,Arial,sans-serif;
+  width:300px;
+  height:100px;
+}
+
 /************ Classes *************/
 
 .clear {
@@ -163,7 +174,7 @@ a {
 #footer a {
   color:#d7d7d7;
   font-family:sans-serif;
-  font-size:10px;
+  font-size:12px;
   text-decoration:none;
   margin-right:10px;
   font-weight:normal;
